app/src/main/assets/components/explorer/explorer.css
music-explorer {
	opacity: 0;
	transition: opacity .4s;

	--total-inset-top: calc(var(--inset-top, 0px) + 16px);
	--total-inset-bottom: calc(var(--inset-bottom, 0px) + 64px);
}

/* curtain */
.explorer-container::after {
	content: '';
	position: absolute;
	inset: 0 0 auto;
	height: var(--total-inset-top);
	background: var(--background);
	pointer-events: none;
}

.explorer {
	position: fixed;
	inset: var(--total-inset-top) 0 var(--total-inset-bottom);
	padding: 64px 0 112px;
	display: flex;
	flex-direction: column;
	opacity: 0;
	transition: scale .3s, opacity .2s;
	overflow: auto;
	pointer-events: none;

	&.out { scale: 1.1; }
	&.in { scale: .9; }
	&.current {
		opacity: 1;
		scale: 1;
		pointer-events: all; /* only the active is clickable (others can be in front but transparent) */
	}
}

.explorer button {
	position: relative;
	flex-shrink: 0;
	display: flex;
	align-items: center;
	margin: 4px 12px;
	padding: 10px 8px;
	border-radius: 12px;
	text-align: start;
	transition: .2s, color .5s, background .8s;

	/* SELECTION */
	&.selected { background: var(--selection-background); }

	&[type="dir"], &.playlist, .ic-mark { color: var(--foreground); }

	span {
		flex-grow: 1;
		max-width: calc(100% - 56px);
		overflow-wrap: break-word;
	}
	i { font-size: 20px; }
	.ic-dir, .ic-music-note { margin-inline: 8px 16px; }
	.ic-mark { margin-inline-end: 8px; }

	/* ACTIVE */
	.active {
		position: absolute;
		inset: -4px -12px;
		background: var(--background);
		transition: background .8s;
		z-index: -1;
	}
	&:active {
		background: transparent;
		.active { background: var(--selection-background); }
	}

	.ic-mark {
		opacity: 0;
		transition: .2s;
	}
	&.marked .ic-mark { opacity: 1; }

	/* SEARCH */
	&.hidden {
		height: 0;
		padding: 0 20px;
		opacity: 0;
	}
}

.explorer-container .scrollbar-track {
	position: fixed;
	inset: var(--total-inset-top) 0 var(--total-inset-bottom) auto;
	width: 24px;

	scale: 0 1;
	transform-origin: right;
	transition: scale .3s;
	&.show { scale: 1; }

	.scrollbar-thumb {
		position: absolute;
		height: 80px;
		width: 100%;

		&::before {
			content: '';
			display: block;
			height: 100%;
			width: 4px;
			margin-inline-start: auto;
			border-radius: 4px 0 0 4px;
			background: var(--selection-background);
			transition: background .2s;
		}

		&:active { background: transparent; }
		&.dragging::before { background: var(--foreground-secondary); }
	}
}

